--- a/Take02/Views/Components/Delete.cshtml
+++ b/Take02/Views/Components/Delete.cshtml
@@ -12,16 +12,16 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentTypeId)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ComponentTypeId)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.ComponentType.Type)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.ComponentType.Type)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
