--- a/Take02/Views/Components/Edit.cshtml
+++ b/Take02/Views/Components/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Take02.Models.Component
+﻿@model Take02.ViewModels.ComponentViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="ComponentTypeId" class="control-label"></label>
-                <input asp-for="ComponentTypeId" class="form-control" />
+                @Html.DropDownList("ComponentTypeId", Model.ComponentTypesSelectListItems, null, new { @class = "form-control" })
                 <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
