--- a/Take02/Views/ComponentTypes/Edit.cshtml
+++ b/Take02/Views/ComponentTypes/Edit.cshtml
@@ -14,6 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="Id" class="control-label"></label>
+                [automatically generated]
+                <br />
+                @Model.Id.ToString()
+            </div>
+            <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
                 <input asp-for="Type" class="form-control" />
                 <span asp-validation-for="Type" class="text-danger"></span>
