--- a/Take02/Views/Ingredients/Create.cshtml
+++ b/Take02/Views/Ingredients/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Take02.Models.Ingredient
+﻿@model Take02.ViewModels.IngredientViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,14 +13,14 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="RecipeId" class="control-label"></label>
-                <input asp-for="RecipeId" class="form-control" />
-                <span asp-validation-for="RecipeId" class="text-danger"></span>
+                <label class="control-label">Recipe</label>
+                @Html.DropDownList("RecipeId", Model.RecipeSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="Recipe.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ComponentId" class="control-label"></label>
-                <input asp-for="ComponentId" class="form-control" />
-                <span asp-validation-for="ComponentId" class="text-danger"></span>
+                <label class="control-label">Component</label>
+                @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="Component.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -28,9 +28,9 @@
                 <span asp-validation-for="Quantity" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="UnitId" class="control-label"></label>
-                <input asp-for="UnitId" class="form-control" />
-                <span asp-validation-for="UnitId" class="text-danger"></span>
+                <label class="control-label">Unit</label>
+                @Html.DropDownList("UnitId", Model.UnitSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="Unit.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
