--- a/Take02/Views/Components/Index.cshtml
+++ b/Take02/Views/Components/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Take02.Models.Component>
+﻿@model IEnumerable<Take02.ViewModels.ComponentViewModel>
 
 @{
     ViewData["Title"] = "Components";
