--- a/Take02/Views/Components/Create.cshtml
+++ b/Take02/Views/Components/Create.cshtml
@@ -13,9 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ComponentTypeId" class="control-label"></label>
+                <label class="control-label">Type</label>
                 @Html.DropDownList("ComponentTypeId", Model.ComponentTypesSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="ComponentTypeId" class="text-danger"></span>
+                <span asp-validation-for="ComponentType.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
