Added ViewModel for Recipes; Commented ModelBuilder lines; Fixed Component, Ingredient, and Recipe models; Added IngredientText to IngredientViewModel.... STILL NEED TO FIX Creating / Displaying new ingredients, and Editing / Saving existing ingredients within a recipe....

--- a/Take02/Views/Recipes/Delete.cshtml
+++ b/Take02/Views/Recipes/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Take02.Models.Recipe
+﻿@model Take02.ViewModels.RecipeViewModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,16 +12,26 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.LibraryId)
+            @Html.DisplayNameFor(model => model.Id)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.LibraryId)
+            @Html.DisplayFor(model => model.Id)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt>
+            Ingredients
+        </dt>
+        <dd>
+            @foreach (var ingredientVM in Model.IngredientViewModels)
+            {
+                @Html.DisplayFor(modelItem => ingredientVM.IngredientText)
+                <br />
+            }
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Instructions)
@@ -36,7 +46,7 @@
             @Html.DisplayFor(model => model.Source)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
