--- a/Take02/Views/Recipes/Create.cshtml
+++ b/Take02/Views/Recipes/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Take02.Models.Recipe
+﻿@model Take02.ViewModels.RecipeViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -7,21 +7,62 @@
 <h2>Create</h2>
 
 <h4>Recipe</h4>
+<h5>* = required</h5>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="LibraryId" class="control-label"></label>
-                <input asp-for="LibraryId" class="form-control" />
-                <span asp-validation-for="LibraryId" class="text-danger"></span>
+                <label class="control-label">Library*</label>
+                @Html.DropDownList("LibraryId", Model.LibrarySelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="Library.Id" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label class="control-label">Name*</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+            @{ int count = Model.IngredientViewModels.Count; }
+            @foreach (var ingredientVM in Model.IngredientViewModels)
+            {
+                <hr />
+                <div class="form-group">
+                    <label class="control-label">Ingredient</label>
+                    <br />
+                    <label class="control-label">Quantity</label>
+                    <input asp-for="@ingredientVM.Quantity" class="form-control" />
+                    <span asp-validation-for="@ingredientVM.Quantity" class="text-danger"></span>
+                    <br />
+                    <label class="control-label">Unit</label>
+                    @Html.DropDownList("UnitId", Model.UnitSelectListItems, Model.UnitSelectListItems.ElementAtOrDefault(1).Text, new { @class = "form-control" })
+                    <span asp-validation-for="@ingredientVM.Unit.Id" class="text-danger"></span>
+                    <br />
+                    <label class="control-label">Component*</label>
+                    @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, null, new { @class = "form-control" })
+                    <span asp-validation-for="@ingredientVM.Component.Id" class="text-danger"></span>
+                    <span asp-validation-for="IngredientViewModels" class="text-danger"></span>
+                    @{
+                        int index = Model.IngredientViewModels.IndexOf(ingredientVM);
+                        if (index > 0)
+                        {
+                            <br />
+                            <a asp-action="MoveUp">Move Up</a>
+                        }
+                        if (index < count - 1)
+                        {
+                            <br />
+                            <a asp-action="MoveDown">Move Down</a>
+                        }
+                        if (index == count - 1)
+                        {
+                            <br />
+                            <a id="addIngredient" href="#">Add Ingredient</a>
+                        }
+                    }
+                </div>
+            }
+            <hr />
             <div class="form-group">
                 <label asp-for="Instructions" class="control-label"></label>
                 <input asp-for="Instructions" class="form-control" />
