MVC changes to match ComponentType rename

--- a/Take02/Views/ComponentTypes/Delete.cshtml
+++ b/Take02/Views/ComponentTypes/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Id)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Type)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Type)
+            @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
     
