--- a/Take02/Views/Components/Delete.cshtml
+++ b/Take02/Views/Components/Delete.cshtml
@@ -18,10 +18,10 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.ComponentType.Type)
+            @Html.DisplayNameFor(model => model.ComponentType.Name)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ComponentType.Type)
+            @Html.DisplayFor(model => model.ComponentType.Name)
         </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Description)
