--- a/Take02/Views/Components/Details.cshtml
+++ b/Take02/Views/Components/Details.cshtml
@@ -29,10 +29,10 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt>
-            Type @*@Html.DisplayNameFor(model => model.ComponentType.Type)*@
+            Type @*@Html.DisplayNameFor(model => model.ComponentType.Name)*@
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.ComponentType.Type)
+            @Html.DisplayFor(model => model.ComponentType.Name)
         </dd>
         <dt>
             TypeId @*@Html.DisplayNameFor(model => model.ComponentType.Id)*@
