--- a/Take02/Views/ComponentTypes/Edit.cshtml
+++ b/Take02/Views/ComponentTypes/Edit.cshtml
@@ -20,9 +20,9 @@
                 @Model.Id.ToString()
             </div>
             <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
-                <input asp-for="Type" class="form-control" />
-                <span asp-validation-for="Type" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-default" />
