--- a/Take02/Views/Components/Index.cshtml
+++ b/Take02/Views/Components/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.ComponentType.Type)
+                @Html.DisplayNameFor(model => model.ComponentType.Name)
             </th>
             @*<th>
                 @Html.DisplayNameFor(model => model.ComponentTypeId)
@@ -32,7 +32,7 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ComponentType.Type)
+                    @Html.DisplayFor(modelItem => item.ComponentType.Name)
                 </td>
                 @*<td>
                     @Html.DisplayFor(modelItem => item.ComponentTypeId)
