--- a/Take02/Views/Ingredients/Index.cshtml
+++ b/Take02/Views/Ingredients/Index.cshtml
@@ -35,16 +35,16 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Recipe.Name)
+                    @Html.DisplayFor(modelItem => item.RecipeName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Quantity)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Unit.Name)
+                    @Html.DisplayFor(modelItem => item.UnitName)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Component.Name)
+                    @Html.DisplayFor(modelItem => item.ComponentName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Number)
