--- a/Take02/Views/Ingredients/Create.cshtml
+++ b/Take02/Views/Ingredients/Create.cshtml
@@ -15,12 +15,12 @@
             <div class="form-group">
                 <label class="control-label">Recipe</label>
                 @Html.DropDownList("RecipeId", Model.RecipeSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Recipe.Id" class="text-danger"></span>
+                <span asp-validation-for="RecipeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label class="control-label">Component</label>
-                @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Component.Id" class="text-danger"></span>
+                <label asp-for="Number" class="control-label"></label>
+                <input asp-for="Number" class="form-control" />
+                <span asp-validation-for="Number" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -30,12 +30,12 @@
             <div class="form-group">
                 <label class="control-label">Unit</label>
                 @Html.DropDownList("UnitId", Model.UnitSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Unit.Id" class="text-danger"></span>
+                <span asp-validation-for="UnitId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Number" class="control-label"></label>
-                <input asp-for="Number" class="form-control" />
-                <span asp-validation-for="Number" class="text-danger"></span>
+                <label class="control-label">Component</label>
+                @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="ComponentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
