--- a/Take02/Views/Ingredients/Edit.cshtml
+++ b/Take02/Views/Ingredients/Edit.cshtml
@@ -16,12 +16,12 @@
             <div class="form-group">
                 <label class="control-label">Recipe</label>
                 @Html.DropDownList("RecipeId", Model.RecipeSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Recipe.Id" class="text-danger"></span>
+                <span asp-validation-for="RecipeId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Component</label>
                 @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Component.Id" class="text-danger"></span>
+                <span asp-validation-for="ComponentId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Quantity" class="control-label"></label>
@@ -31,7 +31,7 @@
             <div class="form-group">
                 <label class="control-label">Unit</label>
                 @Html.DropDownList("UnitId", Model.UnitSelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Unit.Id" class="text-danger"></span>
+                <span asp-validation-for="UnitId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Number" class="control-label"></label>
