--- a/Take02/Views/Recipes/Edit.cshtml
+++ b/Take02/Views/Recipes/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Edit";
+    var modelCount = Model.IngredientViewModels.Count;
+    var addIngredientShown = false;
 }
 
 <h2>Edit</h2>
@@ -15,18 +17,19 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label class="control-label">Library*</label>
-                @Html.DropDownList("LibraryId", Model.LibrarySelectListItems, null, new { @class = "form-control" })
-                <span asp-validation-for="Library.Id" class="text-danger"></span>
+                @Html.DropDownListFor(m => m.LibraryId, Model.LibrarySelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="LibraryId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label class="control-label">Name*</label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            @{
-                int count = Model.IngredientViewModels.Count;
-                bool addIngredientShown = false;
-            }
+            <div class="form-group">
+                <label class="control-label">MixType*</label>
+                @Html.DropDownListFor(m => m.MixTypeId, Model.MixTypeSelectListItems, null, new { @class = "form-control" })
+                <span asp-validation-for="MixTypeId" class="text-danger"></span>
+            </div>
             @foreach (var ingredientVM in Model.IngredientViewModels)
             {
                 <hr />
@@ -39,12 +42,12 @@
                     <span asp-validation-for="@ingredientVM.Quantity" class="text-danger"></span>
                     <br />
                     <label class="control-label">Unit</label>
-                    @Html.DropDownList("UnitId", Model.UnitSelectListItems, ingredientVM.Unit.Name, new { @class = "form-control" })
-                    <span asp-validation-for="@ingredientVM.Unit.Id" class="text-danger"></span>
+                    @Html.DropDownListFor(m => ingredientVM.UnitId, Model.UnitSelectListItems, null, new { @class = "form-control" })
+                    <span asp-validation-for="@ingredientVM.UnitId" class="text-danger"></span>
                     <br />
                     <label class="control-label">Component*</label>
-                    @Html.DropDownList("ComponentId", Model.ComponentSelectListItems, ingredientVM.Component.Name, new { @class = "form-control" })
-                    <span asp-validation-for="@ingredientVM.Component.Id" class="text-danger"></span>
+                    @Html.DropDownListFor(m => ingredientVM.UnitId, Model.ComponentSelectListItems, null, new { @class = "form-control" })
+                    <span asp-validation-for="@ingredientVM.ComponentId" class="text-danger"></span>
                     <span asp-validation-for="IngredientViewModels" class="text-danger"></span>
                     @{
                         int index = Model.IngredientViewModels.IndexOf(ingredientVM);
@@ -53,12 +56,12 @@
                             <br />
                             <a asp-action="MoveUp">Move Up</a>
                         }
-                        if (index < count - 1)
+                        if (index < modelCount - 1)
                         {
                             <br />
                             <a asp-action="MoveDown">Move Down</a>
                         }
-                        if (index == count - 1)
+                        if (index == modelCount - 1)
                         {
                             <br />
                             <a id="addIngredient" href="#">Add Ingredient</a>
